# ResponseArena

./: .gitignore  Dockerfile  README.md  client.py  grader.py  human_eval_dataset.json  inference.py  main.py  openenv.yaml  pyproject.toml  requirements.txt  tasks.json  test_grader.py  validator.py
agent/: agent.py  policy.py  response_generator.py
api/: openenv_adapter.py
app/: app.py  main.py
app/templates/: index.html
core/: config.py  controller.py
data/: human_eval_dataset.json  tasks.json
environment/: context_engine.py  env.py  task_manager.py  user_simulator.py
frontend/: index.html  script.js  style.css
internal_reward/: accuracy_checker.py  human_feedback.py  relevance_checker.py  reward_system.py  tone_analyzer.py
logger/: logger.py
memory/: memory_store.py
openenv/: __init__.py  base_environment.py  environment.py  grader.py  graders.py  models.py  openenv_client.py  response_grader.py  tasks.py
openenv/agent/: __init__.py  response_generator.py
openenv/environment/: context_engine.py  env.py  task_manager.py  user_simulator.py  wrapper.py
openenv/reward/: __init__.py  reward_system.py
reward/: accuracy_checker.py  human_feedback.py  relevance_checker.py  reward_system.py  tone_analyzer.py
rl/: agent.py  policy.py  policy_generator.py
server/: app.py
training/: trainer.py
